# Koomot-killer

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  flutter_rust_bridge.yaml
.zed/: settings.json
crates/kk_core/: Cargo.toml
crates/kk_core/src/: geo.rs  gpx.rs  lib.rs
crates/kk_core/src/osm/: mod.rs  model.rs  pack.rs  pbf.rs  tags.rs
design_refs/: material3_design_refs.html
docs/: 01_product_brief.md  02_mvp_scope.md  03_architecture.md  04_tech_stack.md  05_data_model.md  06_design_system_material3.md  07_roadmap.md  08_dev_plan.md  09_rust_osm_parser.md
flutter_ui/: .gitignore  README.md  pubspec.yaml
flutter_ui/android/: build.gradle.kts
flutter_ui/android/app/: build.gradle.kts
flutter_ui/assets/samples/: demo_route.gpx
flutter_ui/lib/: main.dart
flutter_ui/lib/src/app/: kk_app.dart
flutter_ui/lib/src/data/: demo_route.dart
flutter_ui/lib/src/models/: route_models.dart
flutter_ui/lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
flutter_ui/lib/src/screens/: route_viewer_screen.dart  route_viewer_screen.dart.rej
flutter_ui/lib/src/services/: gpx_importer.dart  route_analysis_mapper.dart  rust_gpx_importer.dart
flutter_ui/lib/src/theme/: app_theme.dart
flutter_ui/lib/src/widgets/: elevation_profile_card.dart  route_map.dart  route_overview_card.dart  route_segments_card.dart  warnings_card.dart
flutter_ui/test/: widget_test.dart
rust_core/: Cargo.toml
rust_core/src/: api.rs  frb_generated.rs  gpx_parser.rs  lib.rs
(+2 files in other folders)
