[package]
name = "kk_core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bincode = "1.3"
gpx = "0.10"
osmpbfreader = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[lints]
workspace = true
